Prepare Cargo.toml to publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "angelio"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license-file = "LICENSE"
+description = "Simple esolang with GPIO support"
+repository = "https://github.com/zzanp/angelio"
+readme = "README.md"
 
 [dependencies]
 rppal = "0.14.1"
